# dataviz

./: .env.template  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: _quarto.yml
eda/: 01_sample.py  05_export_frontend.py  config.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/data/: edges.json  nodes.json
frontend/src/: App.tsx  store.ts  types.ts
frontend/src/components/: GraphView.tsx  Navbar.tsx  Sidebar.tsx
