[project]
name = "epstein-files-network"
version = "0.1.0"
description = "Network analysis of the Epstein Files (DOJ/HuggingFace) — structural holes, NER co-occurrence, ZHAW Visualization & Data Science project"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=4.8.5",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "pandas>=2.3.2",
    "polars>=1.41.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "ydata-profiling>=4.12.2",
]
